source/tests/errors/assign_error_in_failure.apex
import os

x = 10 - 3

try
    x = 10 / 0
failure
    error = "lol"
    os.output(error)